[project]
name = "ai-travel-planner-llmops"
version = "0.1.0"
description = ""
authors = [
    {name = "amaithi-sam",email = "amaithichirasan.s@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "langchain (>=1.2.6,<2.0.0)",
    "langchain-core (>=1.2.7,<2.0.0)",
    "langchain-groq (>=1.1.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "streamlit (>=1.53.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
